[U] 更新 Cache 文档

--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -32,7 +32,7 @@ cache:
   logo: /assets/img/modules/redis.jpg
   name: Final Cache
   menus:
-    - id: readme
+    - id: index
       link: /cache
       icon: dashboard
       name: README
