[U] 添加 enum-converter

--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -21,12 +21,16 @@ spring:
       menus:
         - id: converter
           name: 参数转换器
-          mini: CV
+          mini: CT
           menus:
             - id: date-converter
               link: /spring/web/converter/date-converter
               name: DateConverter
-              mini: DCV
+              mini: DCT
+            - id: enum-converter
+              link: /spring/web/converter/enum-converter
+              name: EnumConverter
+              mini: ECT
         - id: resolver
           name: 参数解析器
           mini: RS
