--- a/final-spring/final-spring-core/pom.xml
+++ b/final-spring/final-spring-core/pom.xml
@@ -34,12 +34,12 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-json-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.1.2</version>
-            <scope>compile</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.github.pagehelper</groupId>-->
+        <!--<artifactId>pagehelper</artifactId>-->
+        <!--<version>5.1.2</version>-->
+        <!--<scope>compile</scope>-->
+        <!--</dependency>-->
     </dependencies>
     <build>
         <plugins>
