[U] add cacheValue and cacheIncrement

--- a/final-spring/pom.xml
+++ b/final-spring/pom.xml
@@ -18,6 +18,7 @@
         <module>final-spring-web</module>
         <module>final-spring-aop</module>
         <module>final-spring-boot-starter</module>
+        <module>final-spring-expression</module>
     </modules>
 
 </project>
