--- a/final-cache/final-cache-core/pom.xml
+++ b/final-cache/final-cache-core/pom.xml
@@ -23,11 +23,20 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
+            <artifactId>final-spring-expression</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework</groupId>
             <artifactId>final-redis-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-json-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.3.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
