--- a/final-spring/final-spring-web/pom.xml
+++ b/final-spring/final-spring-web/pom.xml
@@ -28,11 +28,24 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
+            <artifactId>final-cache-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework</groupId>
             <artifactId>final-data-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-spring-expression</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
