--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,6 +24,9 @@ url: https://final.ilikly.com # the base hostname & protocol for your site, e.g.
 twitter_username: jekyllrb
 github_username:  jekyll
 domain: https://github.com/likly/final-framework/blob/master
+git:
+  url: https://github.com/likly/final-framework
+  domain: Github
 # Build settings
 markdown: kramdown
 highlighter: rouge
