--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -31,6 +31,7 @@ pagehelper:
 logging:
   level:
     org.finalframework: debug
+    org.springframework: info
 server:
   port: 8080
 final:
@@ -44,4 +45,4 @@ final:
     json-service: org.finalframework.json.jackson.JacksonJsonService
   response:
     sync-status: false
-    interceptor: org.finalframework.spring.web.reponse.DefaultResponseInterceptor
+    interceptor: org.finalframework.spring.web.reponse.ResultResponseBodyInterceptor
