[U] refactor exception handler

--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -7,6 +7,7 @@ json:
 mybatis:
   logo: /assets/img/modules/mybatis.jpg
   name: Final Mybatis
+#  Spring Module
 spring:
   logo: /assets/img/modules/spring.svg
   name: Final Spring
@@ -24,7 +25,7 @@ spring:
           name: 切入点
           mini: CP
     - id: web
-      icon: image
+      icon: computer
       name: WEB
       menus:
         - id: converter
@@ -47,7 +48,21 @@ spring:
               link: /spring/web/resolver/request-json-param
               name: RequestJsonParam
               mini: RJP
-
+        - id: exception
+          name: 异常处理器
+          mini: EH
+          menus:
+            - id: global-exception-handler
+              link: /spring/web/exception/global-exception-handler
+              name: GlobalExceptionHandler
+              mini: GEH
+            - id: json-exception-handler
+              link: /spring/web/exception/json-exception-handler
+              name: JsonExceptionHandler
+              mini: JEH
+        - id: interceptor
+          name: 处理器拦截器
+          mini: HI
 cache:
   logo: /assets/img/modules/redis.jpg
   name: Final Cache
