--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -30,7 +30,7 @@ pagehelper:
   params: pageNum=page;size=size
 logging:
   level:
-    org.finalframework: debug
+    org.finalframework: info
     org.springframework: info
 server:
   port: 8080
