--- a/final-monitor/final-monitor-autoconfigure/pom.xml
+++ b/final-monitor/final-monitor-autoconfigure/pom.xml
@@ -9,17 +9,23 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-monitor-core</artifactId>
-
+    <artifactId>final-monitor-autoconfigure</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.finalframework</groupId>
-            <artifactId>final-spring-aop</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-spring-core</artifactId>
+            <artifactId>final-monitor-core</artifactId>
         </dependency>
     </dependencies>
+
 </project>
