--- a/final-monitor/final-monitor-spring-boot-starter/pom.xml
+++ b/final-monitor/final-monitor-spring-boot-starter/pom.xml
@@ -9,17 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-monitor-core</artifactId>
-
+    <artifactId>final-monitor-spring-boot-starter</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-spring-aop</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.finalframework</groupId>
-            <artifactId>final-spring-core</artifactId>
+            <artifactId>final-monitor-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 </project>
