--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-monitor-core</artifactId>
+            <artifactId>final-monitor-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
