--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -13,6 +13,30 @@ framework:
           link: /framework/data/annotation
           mini: AN
           name: Annotation
+monitor:
+  logo: /assets/img/modules/mayi.png
+  name: Final Monitor
+  menus:
+    - id: action
+      name: Action
+      icon: image
+      menus:
+        - id: readme
+          link: /monitor/action/readme
+          name: README
+          mini: RD
+        - id: action
+          link: /monitor/action/action
+          name: Action
+          mini: ACT
+        - id: context
+          name: Context
+          mini: CTX
+          menus:
+            - id: action-context
+              link: /monitor/action/context/action-context
+              name: ActionContext
+              mini: ACTX
 json:
   logo: /assets/img/modules/json.png
   name: Final Json
