--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -40,6 +40,15 @@ monitor:
 json:
   logo: /assets/img/modules/json.png
   name: Final Json
+  menus:
+    - id: index
+      link: /json
+      icon: dashboard
+      name: README
+    - id: json
+      link: /json/json
+      icon: image
+      name: Json
 mybatis:
   logo: /assets/img/modules/mybatis.jpg
   name: Final Mybatis
