[U] update to 0.0.6-SNAPSHOT

--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -32,6 +32,7 @@ logging:
   level:
     org.finalframework: info
     org.springframework: info
+  file: classpath:logback-srping.xml
 server:
   port: 8080
 final:
