--- a/final-data/final-data-core/pom.xml
+++ b/final-data/final-data-core/pom.xml
@@ -5,13 +5,19 @@
     <parent>
         <artifactId>final-data</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.0.14-SNAPSHOT</version>
+        <version>0.0.16-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>final-data-core</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.1.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-core</artifactId>
@@ -28,6 +34,11 @@
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-data-annotation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
