--- a/final-data/final-data-core/pom.xml
+++ b/final-data/final-data-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-data</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.0.17-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
