--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <bintray.repo>maven</bintray.repo>
+        <bintray.package>${project.artifactId}</bintray.package>
     </properties>
 
     <profiles>
@@ -327,14 +329,19 @@
     <!--发布 -->
     <distributionManagement>
         <!--多点仓库-->
+        <!--        <repository>-->
+        <!--            <id>dmall.com</id>-->
+        <!--            <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>-->
+        <!--        </repository>-->
+        <!--        <snapshotRepository>-->
+        <!--            <id>dmall.com</id>-->
+        <!--            <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>-->
+        <!--        </snapshotRepository>-->
         <repository>
-            <id>dmall.com</id>
-            <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>
+            <id>bintray</id>
+            <url>https://api.bintray.com/maven/likly/${bintray.repo}/final-framework/;publish=1</url>
         </repository>
-        <snapshotRepository>
-            <id>dmall.com</id>
-            <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
+
     </distributionManagement>
 
     <repositories>
