--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -53,6 +53,18 @@ json:
       link: /json/json
       icon: image
       name: Json
+    - id: jackson
+      icon: dashboard
+      name: Jackson
+      menus:
+        - id: serializer
+          name: Serializer
+          mini: SER
+          menus:
+            - id: bean-property-modifier
+              link: /json/jackson/serializer/bean-property-modifier
+              name: BeanPropertyModifier
+              mini: BPM
 mybatis:
   logo: /assets/img/modules/mybatis.jpg
   name: Final Mybatis
