--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,16 @@
             </dependency>
             <dependency>
                 <groupId>org.finalframework</groupId>
+                <artifactId>final-redis-api</artifactId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finalframework</groupId>
+                <artifactId>final-redis-ui</artifactId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finalframework</groupId>
                 <artifactId>final-redis-autoconfigure</artifactId>
                 <version>${final.version}</version>
             </dependency>
