--- a/final-redis/pom.xml
+++ b/final-redis/pom.xml
@@ -15,6 +15,9 @@
         <module>final-redis-core</module>
         <module>final-redis-spring-boot-starter</module>
         <module>final-redis-autoconfigure</module>
+        <module>final-redis-api</module>
+        <module>final-redis-ui</module>
     </modules>
+
 
 </project>
