--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -41,6 +41,19 @@
             <artifactId>final-logging</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-redis-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-redis-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
