[F] 优化全局异常处理机制

--- a/docs/_data/sidebar/monitor.yml
+++ b/docs/_data/sidebar/monitor.yml
@@ -25,3 +25,11 @@ menus:
             link: /monitor/action/context/action-context
             name: ActionContext
             mini: ACTX
+  - id: alert
+    name: Alert
+    icon: image
+    menus:
+      - id: readme
+        link: /monitor/alert/readme
+        name: README
+        mini: RD
