--- a/docs/_data/sidebar/mybatis.yml
+++ b/docs/_data/sidebar/mybatis.yml
@@ -1,6 +1,14 @@
 logo: /assets/img/modules/mybatis.jpg
 name: Final Mybatis
 menus:
+  - id: mapper
+    icon: dashboard
+    name: Mapper
+    menus:
+      - id: mapper
+        link: /mybatis/mapper/mapper
+        name: Mapper
+        mini: MP
   - id: handler
     icon: dashboard
     name: 类型处理器
