--- a/final-mybatis/final-mybatis-coding/pom.xml
+++ b/final-mybatis/final-mybatis-coding/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-mybatis-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
