[U] refactor mybatis coding

--- a/final-data/final-data-coding/pom.xml
+++ b/final-data/final-data-coding/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>final-data-annotation</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>${java.version}</version>
