--- a/final-spring/final-spring-coding/pom.xml
+++ b/final-spring/final-spring-coding/pom.xml
@@ -16,6 +16,10 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-coding</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
