--- a/final-test/src/main/resources/final.properties
+++ b/final-test/src/main/resources/final.properties
@@ -1,2 +1,2 @@
-final.nameConverter.tableConverter=org.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
-final.nameConverter.columnConverter=org.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
+#final.nameConverter.tableConverter=org.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
+#final.nameConverter.columnConverter=org.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
