--- a/final-data/final-data-coding/pom.xml
+++ b/final-data/final-data-coding/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-data-annotation</artifactId>
+            <artifactId>final-data-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
