--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ git:
   url: https://github.com/likly/final-framework
   domain: Github
 final:
-  version: 0.1.0-SNAPSHOT
+  version: 0.0.1
 # Build settings
 markdown: kramdown
 highlighter: rouge
