--- a/final-mybatis/final-mybatis-spring-boot-starter/pom.xml
+++ b/final-mybatis/final-mybatis-spring-boot-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-mybatis</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-mybatis-autoconfigure</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
