--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-logging</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
