--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
     <groupId>org.finalframework</groupId>
     <artifactId>final-framework</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-    <!--<version>0.1.0-SNAPSHOT</version>-->
+    <version>0.0.1</version>
+    <!--<version>0.0.1</version>-->
     <modules>
         <module>final-core</module>
         <module>final-util</module>
@@ -36,7 +36,7 @@
     </parent>
 
     <properties>
-        <final.version>0.1.0-SNAPSHOT</final.version>
+        <final.version>0.0.1</final.version>
         <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
         <!--<spring-cloud.version>Greenwich.RC2</spring-cloud.version>-->
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
@@ -45,6 +45,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <bintray.user>likly</bintray.user>
         <bintray.repo>maven</bintray.repo>
         <bintray.package>${project.artifactId}</bintray.package>
     </properties>
@@ -356,7 +357,7 @@
         <!--        </snapshotRepository>-->
         <repository>
             <id>bintray</id>
-            <url>https://api.bintray.com/maven/likly/${bintray.repo}/final-framework/;publish=1</url>
+            <url>https://api.bintray.com/maven/${bintray.user}/${bintray.repo}/${project.artifactId}/;publish=1</url>
         </repository>
 
     </distributionManagement>
