[U] replace coder to velocity

--- a/final-data/final-data-spring-boot-starter/pom.xml
+++ b/final-data/final-data-spring-boot-starter/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-data-coding</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
