--- a/final-json/final-json-core/pom.xml
+++ b/final-json/final-json-core/pom.xml
@@ -17,24 +17,20 @@
             <artifactId>final-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.finalframework</groupId>
-            <artifactId>final-util</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.53</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
