[U] update datasource coding

--- a/final-dubbo/pom.xml
+++ b/final-dubbo/pom.xml
@@ -16,8 +16,16 @@
         <module>final-dubbo-annotation</module>
     </modules>
 
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
