--- a/final-mybatis/final-mybatis-coding/pom.xml
+++ b/final-mybatis/final-mybatis-coding/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>final-mybatis-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
