--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -28,3 +28,14 @@ gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.0.1" if Gem.win_platform?
 
+gem 'jekyll-gist'
+gem 'jekyll-coffeescript'
+# gem 'jekyll-default-layout'
+gem 'jekyll-gist'
+gem 'jekyll-github-metadata'
+gem 'jekyll-optional-front-matter'
+gem 'jekyll-paginate'
+# gem 'jekyll-readme-index'
+gem 'jekyll-titles-from-headings'
+gem 'jekyll-relative-links'
+
