--- a/final-coding/pom.xml
+++ b/final-coding/pom.xml
@@ -17,6 +17,7 @@
         <module>final-coding-mapper</module>
         <module>final-coding-service</module>
         <module>final-coding-controller</module>
+        <module>final-coding-datasource</module>
         <module>final-coding-spring</module>
     </modules>
 
