[U] SpringFactory support package element

--- a/final-spring/pom.xml
+++ b/final-spring/pom.xml
@@ -19,6 +19,7 @@
         <module>final-spring-expression</module>
         <module>final-spring-web</module>
         <module>final-spring-boot-starter</module>
+        <module>final-spring-ui</module>
     </modules>
 
 </project>
