--- a/final-json/final-json-autoconfigure/pom.xml
+++ b/final-json/final-json-autoconfigure/pom.xml
@@ -33,10 +33,10 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-coding-spring</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.finalframework</groupId>-->
-<!--            <artifactId>final-spring-annotation</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-spring-annotation</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
